# rusty_boy

./: .gitignore  Cargo.toml  dap-configs.el  index.html  readme.md
.github/workflows/: build.yml
src/: audio_controller.rs  bus.rs  constants.rs  cpu.rs  cpu.rs~  cpu_registers.rs  custom_errors.rs  game_app.rs  hdma_controller.rs  interrupt_handler.rs  joypad.rs  lib.rs  main.rs  mbc.rs  memory_bank_controller.rs  mmu.rs  ppu.rs  serial.rs  timer.rs
src/cpu/: #memory_mapper.rs#  cb_instructions.rs  cpu_instructions.rs  cpu_registers.rs  instructions.rs  memory_mapper.rs
src/mbc/: mbc1.rs  mbc3.rs  mbc5.rs  no_mbc.rs
