[package]
name = "rusty_boy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[env]
RUST_BACKTRACE=1

[dependencies]
raylib = { version = "3.7" }
log = "0.4"
log4rs = "1.2.0"
strum = "0.24.1"
strum_macros = "0.24.3"

